--- a/index.html
+++ b/index.html
@@ -9,5 +9,16 @@
 </head>
 <body>
     
+    <main class="flex items-center justify-center min-h-screen bg-gray-100">
+        <div class="mockup-phone border-primary">
+            <div class="camera"></div>
+            <div class="display">
+                <div class="artboard artboard-demo phone-1 flex items-center justify-center">
+                    Hi
+                </div>
+            </div>
+        </div>
+    </main>
+
 </body>
 </html>
