--- a/index.html
+++ b/index.html
@@ -19,24 +19,20 @@
                         <div class="hero-content flex-col lg:flex-row-reverse">
                           <div class="text-center lg:text-left">
                             <h1 class="text-5xl font-bold">Login now!</h1>
-                            <p class="py-6">
-                              Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem
-                              quasi. In deleniti eaque aut repudiandae et a id nisi.
-                            </p>
                           </div>
                           <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
                             <form class="card-body">
                               <div class="form-control">
                                 <label class="label">
-                                  <span class="label-text">Email</span>
+                                  <span class="label-text">Phone Number</span>
                                 </label>
-                                <input type="email" placeholder="email" class="input input-bordered" required />
+                                <input type="text" placeholder="Enter Your Phone Number" class="input input-bordered" required />
                               </div>
                               <div class="form-control">
                                 <label class="label">
-                                  <span class="label-text">Password</span>
+                                  <span class="label-text">Pin</span>
                                 </label>
-                                <input type="password" placeholder="password" class="input input-bordered" required />
+                                <input type="password" placeholder="Your Pin" class="input input-bordered" required />
                                 <label class="label">
                                   <a href="#" class="label-text-alt link link-hover">Forgot password?</a>
                                 </label>
